<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoodsActivity">

    <ImageView
        android:id="@+id/hatImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/hat_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginTop="50dp"
        />

    <ImageView
        android:id="@+id/dressImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/dress"
        app:layout_constraintStart_toEndOf="@id/hatImage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/bagImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/bags_img"
        app:layout_constraintStart_toEndOf="@id/dressImage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="6dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/txtHats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hat_goods"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/hatImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/txtDresses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dress_goods"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/dressImage"
        app:layout_constraintStart_toEndOf="@id/txtHats"
        android:layout_marginStart="85dp" />

    <TextView
        android:id="@+id/txtBags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bag_goods"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/bagImage"
        app:layout_constraintStart_toEndOf="@+id/txtDresses"
        android:layout_marginStart="80dp"
         />




</androidx.constraintlayout.widget.ConstraintLayout>