<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity">

    <ImageView
        android:id="@+id/shopImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/shop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/txtShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shop_serv"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/shopImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/delvImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/deliver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopImage"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/txtDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/delv_serv"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/delvImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/consImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/consultate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delvImage"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/txtCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cons_serv"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/consImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>